[package]
name = "ticws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", default-features = true, features = ["full"] }
futures-util = { version = "0.3", default-features = false }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures-channel = "0.3.30"
url = "2.5.0"
clap = { version = "4.4.18", features = ["derive"] }


[[bin]]
name="ticws-client"
path="src/client.rs"


[[bin]]
name="ticws-server"
path="src/server.rs"

