[package]
name = "ticws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", default-features = true, features = ["full"] }
futures-util = { version = "0.3.31", default-features = false }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"
futures-channel = "0.3.31"
url = "2.5.4"
clap = { version = "4.5.23", features = ["derive"] }


[[bin]]
name="ticws-client"
path="src/client.rs"


[[bin]]
name="ticws-server"
path="src/server.rs"

